crud for topics

--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,2 @@
-<h1>Topics#show</h1>
-<% @bookmarks.each do |bookmark| %>
-<%= bookmark.url %>
-<% end %>
+<h1>Bookmarks about <%= "#{@title}"%></h1>
+
