--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,2 +1,6 @@
-<h1>Topics#index</h1>
-<p>Find me in app/views/topics/index.html.erb</p>
+<h1>Topics</h1>
+<p>Send an e-mail to postmaster@app4231fc923763453e9611700de2197df9.mailgun.org. The subject will be the topic and your url will create a new bookmark in that subject. Give it a try!</p>
+
+<%= render 'form'%>
+<%= render @topics %>
+
