--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,2 +1,2 @@
 <h1>Bookmarks about <%= "#{@title}"%></h1>
-<%= render @bookmarks %>
+<%= render partial: 'topics/bookmarks', collection: @bookmarks %>
