--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,3 +1,4 @@
 <p>#<%= link_to topic.title.capitalize, topic %>
 <%= link_to "Delete Topic", [@topic, topic], method: :delete, data: { confirm: 'Are you sure you want to delete this topic?' } %> 
 </p>
+<%= topic.bookmarks.count%>
