--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,2 +1,5 @@
 <h1>Bookmarks about <%= "#{@title}"%></h1>
-<%= render partial: 'topics/bookmarks', collection: @bookmarks %>
+<%= render partial: 'bookmarks/form'%>
+<%= render partial: 'bookmarks/bookmarks', collection: @bookmarks%>
+
+
