--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Bookmarks about <%= "#{@title}"%></h1>
+<%= link_to "Back to topics", topics_path %>
 <%= render partial: 'bookmarks/form'%>
-<%= render partial: 'bookmarks/bookmarks', collection: @bookmarks%>
+<%= render partial: 'bookmarks/bookmarks', collection: @bookmarks %>
 
 
