--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,10 @@
-<h1>My FAVS</h1>
+
+<div class="jumbotron">
+  <div class="text"> 
+  <div>This app lets you e-mail a link to your</br>
+    My Favs account and it automatically bookmarks it.</br>
+    Give it a try!</div>
+<%= link_to "Sign up", new_user_registration_path, class: "btn btn-default" %>
+</div>
+</div>
 
