--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,7 +1,9 @@
+<div class= "topic_form">
 <% if current_user%>
 <h4>Create a topic:</h4>
 <%= form_for [@topic, @topics.build] do |f| %>
-<%= f.text_area :title, placeholder: "Enter topic here" %>
-<%= f.submit "Save" %>
+<%= f.text_area :title, class: "form-control", placeholder: "Enter topic here" %><br/> 
+<%= f.submit "Save", class: "btn btn-default" %>
 <% end %>
 <% end %>
+</div>
