--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Bookmarks#edit</h1>
-<p>Find me in app/views/bookmarks/edit.html.erb</p>
+<h1>Edit Bookmark</h1>
+<%= form_for [@topic, @bookmark] do |f|%>
+<%= f.text_area :url, placeholder: "Edit topic here"%>
+<%= f.submit "Save" %>
+<% end %>
+
