--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -3,7 +3,7 @@
 <span class="small">P.S. You can also create a topic below :)</span>
 </p>
 <%= render 'form'%>
-<%= render @topics %>
+<%= render @topics, toipic: @topic %>
 
 
 
