--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,2 +1,5 @@
-<h1>Topics#edit</h1>
-<p>Find me in app/views/topics/edit.html.erb</p>
+<h1>Edit Topic</h1>
+<%= form_for @topic do |f|%>
+<%= f.text_area :title, placeholder: "Edit topic here"%>
+<%= f.submit "Save" %>
+<% end %>
