--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,6 +1,10 @@
 <!-- <div class="url"> -->
 <p><%= bookmark.url  %></p>
+<% if policy(bookmark).destroy?%>
   <%= link_to "Delete bookmark", topic_bookmark_path(topic, bookmark), method: :delete %>
+  <% end %>
+  <% if policy(bookmark).edit? %>
 <%= link_to "Update bookmark", edit_topic_bookmark_path(topic, bookmark) %>
+<% end %>
 <!-- </div> -->
 
