--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,9 +1,23 @@
 <div class= "topic_form">
-<% if current_user%>
-<h4>Create a topic:</h4>
-<%= form_for [@topic, @topics.build] do |f| %>
-<%= f.text_area :title, class: "form-control", placeholder: "Enter topic here" %><br/> 
+
+<%= form_for [topic] do |f| %>
+  <% if topic.errors.any? %>
+  <div class= "alert alert-danger">
+    <h4>There are <%= pluralize(topic.errors.count, "error") %></h4>
+  <ul>
+    <% topic.errors.full_messages.each do |msg |%>
+    <li><%= msg %></li>
+    <% end %>
+  </ul>
+  </div>
+  <% end %>
+
+<%= form_group_tag(topic.errors[:title]) do %>  
+<%= f.label :title %>
+<%= f.text_field :title, class: 'form-control', placeholder: "Enter topic name here" %>
+<% end %>
+
 <%= f.submit "Save", class: "btn btn-default" %>
 <% end %>
-<% end %>
+
 </div>
