--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -51,7 +51,7 @@ i {
   display: inline-block;
   margin: 10px;
   padding: 10px;
-  background-color: rgba(102, 17, 65, 0.3);
+  background-color: rgba(102, 17, 65, 0.1);
   border-radius: 4px;
 }
 
@@ -86,6 +86,10 @@ text-align: center;
 
 .delete {
   font-size: 12px;
+}
+
+.edit {
+  font-size: 16px;
 }
 
 .url {
