--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,9 +1,11 @@
 <div class= "topic_form">
-<% if current_user%>
+
+
 <h4>Create a bookmark:</h4>
+
 <%= form_for [@topic, Bookmark.new] do |f| %>
-<%= f.text_area :url, class: 'form-control', placeholder: "Enter bookmark here" %><br/> 
-<%= f.submit "Save", class: 'btn btn-default' %>
-<% end %>
-<% end %>
+  <%= f.text_field :url, class: 'form-control', placeholder: "Enter bookmark here" %><br/> 
+  <%= f.submit "Save", class: 'btn btn-default' %>
+  <% end %>
+
 </div>
