--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,5 +1,3 @@
 <h1>Edit Topic</h1>
-<%= form_for @topic do |f|%>
-<%= f.text_area :title, placeholder: "Edit topic here"%>
-<%= f.submit "Save" %>
-<% end %>
+<%= render partial: 'form', locals: {topic: @topic} %>
+
