--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,8 +2,9 @@
 <p class="instructions"><b>Instructions:</b> Send an e-mail to <i>postmaster@app4231fc923763453e9611700de2197df9.mailgun.org</i>. The subject will be the topic and your url will create a new bookmark in that subject. Give it a try!<br/>
 <span class="small">P.S. You can also create a topic below :)</span>
 </p>
-<%= render 'form'%>
-<%= render @topics, toipic: @topic %>
+
+<%= link_to "New Topic", new_topic_path %>
+<%= render @topics, topic: @topic %>
 
 
 
