--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,3 +1,16 @@
+<div class="container">
 <h1>Edit Topic</h1>
+<div class="row">
+  <div class="col-md-4">
+    <p>Guidelines for topics</p>
+    <ul>
+      <li>The name has to be original (this means it should not exist already in the topic list.)</li>
+      <li> The topic can only have numbers and/or letters </li>
+      <li> The topic cannot be blank </li>
+    </ul>
+  </div>
 <%= render partial: 'form', locals: {topic: @topic} %>
+</div>
+</div>
+
 
