--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,10 +1,16 @@
-<!-- <div class="url"> -->
-<p><%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %></p>
-<% if policy(bookmark).destroy?%>
-  <%= link_to "Delete bookmark", topic_bookmark_path(topic, bookmark), method: :delete %>
+<ul>
+<li class="bookmark"><%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
+
+<% if policy(bookmark).edit? %>
+  <span class="edit_b">
+  <%= link_to " ", edit_topic_bookmark_path(topic, bookmark), class: "glyphicon glyphicon-pencil" %></span>
   <% end %>
-  <% if policy(bookmark).edit? %>
-<%= link_to "Update bookmark", edit_topic_bookmark_path(topic, bookmark) %>
-<% end %>
-<!-- </div> -->
+
+
+<% if policy(bookmark).destroy?%>
+  <span class="delete_b"><%= link_to " ", topic_bookmark_path(topic, bookmark), method: :delete, class: "glyphicon glyphicon-remove" %>  </span>
+  <% end %>
+  </li>
+</ul>
+
 
