--- a/app/views/bookmarks/_form.html.erb
+++ b/app/views/bookmarks/_form.html.erb
@@ -1,11 +1,7 @@
 <div class= "topic_form">
-
-
-<h4>Create a bookmark:</h4>
-
-<%= form_for [@topic, Bookmark.new] do |f| %>
+<%= form_for [topic, bookmark] do |f| %>
+  <%= f.label :url %>
   <%= f.text_field :url, class: 'form-control', placeholder: "Enter bookmark here" %><br/> 
   <%= f.submit "Save", class: 'btn btn-default' %>
   <% end %>
-
 </div>
