--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
   <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -31,7 +32,7 @@
 
   <div class="masthead">
     <nav>
-   <span class="brand"> My Favs </span> 
+   <span class="brand"> <%= link_to "My Favs", root_path %> </span> 
    <span class= "glyphicon glyphicon-heart-empty"></span>
     <div class="pull-right user-info">
       <% if current_user %>
