--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,10 +1,13 @@
 <h1>Topics</h1>
+
 <p class="instructions"><b>Instructions:</b> Send an e-mail to <i>postmaster@app4231fc923763453e9611700de2197df9.mailgun.org</i>. The subject will be the topic and your url will create a new bookmark in that subject. Give it a try!<br/>
 <span class="small">P.S. You can also create a topic below :)</span>
 </p>
 
-<%= link_to "New Topic", new_topic_path %>
+<div class="new"><%= link_to "New Topic", new_topic_path %></div>
+
 <%= render @topics, topic: @topic %>
+<%= will_paginate @topics %>
 
 
 
