--- a/app/views/likes/_like.html.erb
+++ b/app/views/likes/_like.html.erb
@@ -1,11 +1,11 @@
 <div>
   <% if like = current_user.liked(bookmark) %>
     <%= link_to [bookmark, like], method: :delete do %>
-      <i class="glyphicon glyphicon-star-empty"> </i>&nbsp; Unlike
+      <i class="glyphicon glyphicon-star"> </i>&nbsp; Unlike
     <% end %>
   <% else %>
     <%= link_to [bookmark, Like.new], method: :post do %>
-      <i class="glyphicon glyphicon-star"> </i>&nbsp; Like
+      <i class="glyphicon glyphicon-star-empty"> </i>&nbsp; Like
     <% end %>
   <% end %>
 </div>
