--- a/app/views/topics/_topic.html.erb
+++ b/app/views/topics/_topic.html.erb
@@ -1,7 +1,7 @@
 <div class= "topic">  
   <span class= "hashtag">#<%= link_to topic.title.capitalize, topic %></span> <span class= "edit"><%= link_to " ", edit_topic_path(topic), class: "glyphicon glyphicon-pencil" %></span>
 
-<%if policy(topic).destroy? && topic.bookmarks.count == 0 %>
+<%if policy(topic).destroy? %>
   <span class= "delete"> <%= link_to "", [@topic, topic], method: :delete, data: { confirm: 'Are you sure you want to delete this topic?'}, class: "glyphicon glyphicon-remove" %> </span>
 <% end %>
 <br/>
