--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -11,6 +11,6 @@
   </div>
 <%= render partial: 'form', locals: {topic: @topic} %>
 </div>
-<span class="link"><%= link_to "Back to Topics", root_path %></span>
 </div>
+<span title="Back to topics" class="link_two"><%= link_to " ", topics_path, class: "glyphicon glyphicon-arrow-left" %></span>
 
