--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,25 +12,20 @@ body {
 
 h1 {
   text-align: center;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Indie Flower', sans-serif;
 }
 
 .link_two a {
   color: rgb(204, 0, 102);
-  background-color: rgba(178, 178, 178, 0.3);
-  border-radius: 4px;
-  padding: 4px;
   text-decoration: none;
-  margin-left: 20px;
-  float: right;
-  font-family: 'Indie Flower', cursive;
   font-size: 18px;
+  margin-left: 30px;
 }
 
 /* Header */
 .brand a {
   font-size: 26px;
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Indie Flower', sans-serif;
   color: rgb(204, 0, 102);
   padding-left: 10px;
   text-decoration: none;
@@ -43,8 +38,22 @@ h1 {
 }
 
 .user-info {
-  padding-right: 15px;
-  padding-top: 10px;
+margin-right: 10px;
+font-style: italic;
+}
+
+.user {
+  font-size: 20px;
+}
+
+.user a:first-child {
+  text-decoration: none;
+  color: rgb(204, 0, 102);
+  font-style: italic;
+}
+
+.user a:nth-child(2) {
+  font-size: 12px;
 }
 
 /* Form */
@@ -54,9 +63,10 @@ h1 {
 
 .topic_form {
   text-align: center;
-  display: inline-block;
-  margin: 10px;
+  display: block;
+  margin: auto;
   padding: 10px;
+  width: 20%;
   background-color: rgba(102, 17, 65, 0.1);
   border-radius: 4px;
 }
@@ -68,11 +78,13 @@ h1 {
   border-radius: 4px;
   padding: 10px;
   margin: 40px;
-  font-size: 18px;
+  font-size: 14px;
 }
 
 i {
-  color: rgb(255, 0, 102);
+  color: rgb(204, 0, 102);
+  text-decoration: none;
+  font-size: 16px;
 }
 
 .small {
@@ -80,18 +92,20 @@ i {
 }
 
 .new {
-  background-color: rgba(102, 153, 153, 0.1);
+
   border-radius: 4px;
-  padding: 4px;
-  font-family: 'Indie Flower', cursive;
-  font-size: 18px;
+  padding: 8px;
+  font-family: 'Indie Flower', sans-serif;
   width: 10%;
   text-align: center;
+  margin-left: 20px;
 }
 
   .new a {
   color: rgb(204, 0, 102);
   text-decoration: none;
+  font-family: 'Indie Flower', sans-serif;
+  font-size: 44px;
   }
 
 .topic {
@@ -107,7 +121,7 @@ height: 120px;
 
   .hashtag {
   color: rgb(204, 0, 102);
-  font-family: 'Indie Flower', cursive;
+  font-family: 'Indie Flower', sans-serif;
   font-size: 32px;
   }
 
@@ -132,7 +146,7 @@ height: 120px;
 
 /* Topics#show */
 
-.color{
+.color {
   color: rgb(204, 0, 102);
 }
 
@@ -163,6 +177,30 @@ height: 120px;
   font-size: 24px;
   background-color: transparent;
   border-radius: 4px;
+}
+
+/*404 error*/
+
+.image img{
+  hieght: 400px;
+  width: 400px;
+  margin: auto;
+  display: block;
+  text-align: center;
+}
+
+.image_text {
+  font-size: 18px;
+  display: block;
+  text-align: center;
+}
+
+/* Devise */
+
+.devise_form {
+  display: block;
+  margin: auto;
+  text-align: center;
 }
 
 /* Responsive: Portrait tablets and up */
