--- a/app/views/bookmarks/_bookmark.html.erb
+++ b/app/views/bookmarks/_bookmark.html.erb
@@ -1,18 +1,12 @@
-<ul>
-<li class="bookmark"><%= link_to "#{bookmark.url}", "http://#{bookmark.url}", target: "_blank" %>
+
+<span class="bookmark"><%= link_to "#{bookmark.url.delete(' ')}", "http://#{bookmark.url.delete(' ')}", target: "_blank" %>
 
 <%= render partial: 'likes/like', locals: { bookmark: bookmark } %>
-  
-<% if policy(bookmark).edit? %>
-  <span class="edit_b">
-  <%= link_to " ", edit_topic_bookmark_path(topic, bookmark), class: "glyphicon glyphicon-pencil" %></span>
-  <% end %>
 
-<% if policy(bookmark).destroy?%>
-  <span class="delete_b"><%= link_to " ", topic_bookmark_path(topic, bookmark), method: :delete, class: "glyphicon glyphicon-remove" %>  </span>
-  <% end %>
-  </li>
-</ul>
+<%= render partial: 'bookmarks/right', locals: {bookmark: bookmark, topic: topic} %> <br/> 
+
+</span>
+
 
 
 
