--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-<h1>Edit Topic</h1>
+<h1>Edit Topic</h1><br/>
 <div class="row">
   <div class="col-md-4">
     <p>Guidelines for topics</p>
@@ -12,5 +12,5 @@
 <%= render partial: 'form', locals: {topic: @topic} %>
 </div>
 </div>
-
+<span title="Back to topics" class="link_two"><%= link_to " ", topics_path, class: "glyphicon glyphicon-arrow-left" %></span>
 
