linked favorite bookmarks and edited readme file

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,7 +9,7 @@
 
 <h4>Your favorite bookmarks</h4>
   <% @liked_bookmarks.each do |like|%>
-  <%= like.bookmark.url %>
+  <%= link_to "#{like.bookmark.url}", "http://#{like.bookmark.url}", target: "_blank" %>
     <%= render partial: 'likes/like', locals: { bookmark: like.bookmark } %><br/>
   <% end %>
 
